--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_library(beecrowd STATIC library.cpp
         2006.cpp
-        1170.cpp)
+        1170.cpp
+        1138.cpp)
